--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
+flask-bcrypt = "1.0.1"
+flask-marshmallow = "0.14.0"
+marshmallow = "3.18.0"
+marshmallow-sqlalchemy = "0.28.1"
 
 [requires]
 python_full_version = "3.8.13"
