--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ flask-bcrypt = "1.0.1"
 flask-marshmallow = "0.14.0"
 marshmallow = "3.18.0"
 marshmallow-sqlalchemy = "0.28.1"
+stripe = "*"
 
 [requires]
 python_full_version = "3.8.13"
