--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^5.14.8",
     "@mui/icons-material": "^5.14.8",
     "@reduxjs/toolkit": "1.8.5",
+    "@stripe/react-stripe-js": "*",
+    "@stripe/stripe-js": "*",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",  
